--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="form-container">
-    <img src="/ucobanklogo.png" alt="UCO Bank Logo" class="logo">
+    <img src="ucobanklogo.png" alt="UCO Bank Logo" class="logo">
     <h2>Customer Account Information</h2>
 
     <form id="bankForm">
